--- a/practice_day_2.html
+++ b/practice_day_2.html
@@ -56,27 +56,31 @@
             
             <div class="container mt-5">
                 <div class="row text-center">
-                  <!-- Card 1 -->
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" style="--percentage: 87; --color: #ff4c4c;" data-percentage="87"></div>
+                    <div class="icon-circle progress-circle" value ="87">
+
+                    </div>
                     <h5>Prayer Facility</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
-                  <!-- Card 2 -->
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" style="--percentage: 95; --color: #28a745;" data-percentage="95"></div>
+                    <div class="icon-circle progress-circle" value ="95">
+
+                    </div>
                     <h5>Experienced Coach</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
-                  <!-- Card 3 -->
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" style="--percentage: 90; --color: #ffc107;" data-percentage="90"></div>
+                    <div class="icon-circle progress-circle" value ="90">
+
+                    </div>
                     <h5>Senior Player</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
-                  <!-- Card 4 -->
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" style="--percentage: 80; --color: #007bff;" data-percentage="80"></div>
+                    <div class="icon-circle progress-circle" value ="80">
+
+                    </div>
                     <h5>Training Ground</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
@@ -313,6 +317,7 @@
             </div>
             <div class="social-media m-5 text-center bg-light">
                 <h2 class="p-5 fw-bold">Social Media</h2>
+                <img src="image/" alt="">
             </div>
         </section>
     </main>
