--- a/practice_day_2.html
+++ b/practice_day_2.html
@@ -57,28 +57,28 @@
             <div class="container mt-5">
                 <div class="row text-center">
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" value ="87">
+                    <div class="circle" value ="87">
 
                     </div>
                     <h5>Prayer Facility</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" value ="95">
+                    <div class="circle" value ="95">
 
                     </div>
                     <h5>Experienced Coach</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" value ="90">
+                    <div class="circle" value ="90">
 
                     </div>
                     <h5>Senior Player</h5>
                     <p class="">Amet consectetur. Condimentum dignissim adipiscing.</p>
                   </div>
                   <div class="col-md-3">
-                    <div class="icon-circle progress-circle" value ="80">
+                    <div class="circle" value ="80">
 
                     </div>
                     <h5>Training Ground</h5>
@@ -315,9 +315,13 @@
                   </div>
                 </div>
             </div>
-            <div class="social-media m-5 text-center bg-light">
-                <h2 class="p-5 fw-bold">Social Media</h2>
-                <img src="image/" alt="">
+            <div class="social-media m-5 text-center bg-light rounded-4">
+                <h2 class="pt-5 bs-5 pe-5 fw-bold">Social Media</h2>
+                <div class="ps-5 pe-5 pb-5">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/facebook.png" alt="">
+                    <img src="images/icons/insta.png" alt="">
+                </div>
             </div>
         </section>
     </main>
